--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,9 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
-    implementation 'androidx.room:room-runtime:2.2.6'
-    implementation 'androidx.room:room-ktx:2.2.6'
-    kapt "androidx.room:room-compiler:2.2.6"
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt "androidx.room:room-compiler:2.3.0"
 
 }
